Bug 329892 - Focus problems in form combo boxes
Summary: Focus problems in form combo boxes
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.8 beta1
Platform: Compiled Sources All
: NOR normal
Target Milestone: 2.8
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks: 304989
  Show dependency treegraph
 
Reported: 2014-01-12 23:44 UTC by Jarosław Staniek
Modified: 2014-07-26 21:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-01-12 23:44:50 UTC
+++ This bug was initially created as a clone of Bug #329141 +++

When tabbing focus between fields in a form, focus gets stuck in the combo boxes. 

Reproducible: Always

Steps to Reproduce:
1 - Open frmBar in the attached testcase.
2 - Try pressing "Tab" to switch fields

Actual Results:  Focus gets stuck in the combo box

Expected Results:  "Tab" changes focus from combo box to next text box
Comment 1 Jarosław Staniek 2014-02-20 09:58:20 UTC
Git commit a7799e20a7b3a1c2dfbe1e9968b8312b46d9fc2c by Jaroslaw Staniek.
Committed on 04/02/2014 at 23:07.
Pushed by staniek into branch 'calligra/2.8'.

Improve focus, keyboard interaction and painting in table and form views

- Focus combo box after accepting or cancelling selection in combo popup
- Show focus in combo box after accepting or cancelling row changes
- Remove focus from combo box after clicking outside of its popup
- Improve appearance of combo box' button in table view
- Fix missing re-display of table view combo box popup
- Fix focus in table view combo box popup
- Make clipboard shortcuts work again in table view cells
- Properly set focus inside table view after activation
Related: bug 304989

M  +0    -6    kexi/core/KexiWindow.cpp
M  +9    -1    kexi/plugins/forms/kexiformscrollview.cpp
M  +31   -11   kexi/plugins/forms/widgets/kexidbcombobox.cpp
M  +2    -1    kexi/plugins/forms/widgets/kexidbcombobox.h
M  +4    -3    kexi/plugins/forms/widgets/kexidbform.cpp
M  +31   -7    kexi/widget/dataviewcommon/kexidataawareview.cpp
M  +1    -0    kexi/widget/dataviewcommon/kexidataawareview.h
M  +14   -4    kexi/widget/tableview/kexicomboboxbase.cpp
M  +5    -1    kexi/widget/tableview/kexicomboboxbase.h
M  +3    -2    kexi/widget/tableview/kexicomboboxpopup.cpp
M  +12   -9    kexi/widget/tableview/kexicomboboxtableedit.cpp
M  +6    -5    kexi/widget/tableview/kexitableview.cpp
M  +3    -3    kexi/widget/tableview/kexitableview.h
M  +5    -104  kexi/widget/utils/kexicomboboxdropdownbutton.cpp
M  +5    -16   kexi/widget/utils/kexicomboboxdropdownbutton.h

http://commits.kde.org/calligra/a7799e20a7b3a1c2dfbe1e9968b8312b46d9fc2c
Comment 2 Jarosław Staniek 2014-02-20 10:08:45 UTC
Git commit 2b6e380dc9391c1ba1d2f957ab31bf247d81c17f by Jaroslaw Staniek.
Committed on 04/02/2014 at 23:07.
Pushed by staniek into branch 'master'.

Improve focus, keyboard interaction and painting in table and form views

- Focus combo box after accepting or cancelling selection in combo popup
- Show focus in combo box after accepting or cancelling row changes
- Remove focus from combo box after clicking outside of its popup
- Improve appearance of combo box' button in table view
- Fix missing re-display of table view combo box popup
- Fix focus in table view combo box popup
- Make clipboard shortcuts work again in table view cells
- Properly set focus inside table view after activation
REVIEW:115489

M  +0    -6    kexi/core/KexiWindow.cpp
M  +9    -1    kexi/plugins/forms/kexiformscrollview.cpp
M  +31   -11   kexi/plugins/forms/widgets/kexidbcombobox.cpp
M  +2    -1    kexi/plugins/forms/widgets/kexidbcombobox.h
M  +4    -3    kexi/plugins/forms/widgets/kexidbform.cpp
M  +31   -7    kexi/widget/dataviewcommon/kexidataawareview.cpp
M  +1    -0    kexi/widget/dataviewcommon/kexidataawareview.h
M  +14   -4    kexi/widget/tableview/kexicomboboxbase.cpp
M  +5    -1    kexi/widget/tableview/kexicomboboxbase.h
M  +3    -2    kexi/widget/tableview/kexicomboboxpopup.cpp
M  +12   -9    kexi/widget/tableview/kexicomboboxtableedit.cpp
M  +6    -5    kexi/widget/tableview/kexitableview.cpp
M  +3    -3    kexi/widget/tableview/kexitableview.h
M  +5    -104  kexi/widget/utils/kexicomboboxdropdownbutton.cpp
M  +5    -16   kexi/widget/utils/kexicomboboxdropdownbutton.h

http://commits.kde.org/calligra/2b6e380dc9391c1ba1d2f957ab31bf247d81c17f